<resources>
    <string name="app_name">BG Haat</string>

    <string name="happy_shopping_at_bh_haat">Happy Shopping At BG Haat</string>
    <string name="shop_description">BH Haat is one of the most reliable online platform. Our aim to providing hassle-free online shopping services for shopaholic people.</string>
    <string name="pay_on_delivery">Pay On Delivery</string>
    <string name="paymet_description">At BG Haat you can pay without any hassel. We support Bangladeshi and international payment system. You can also pay after received product</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_number">We will send you an One Time Password on this number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_880">+88-</string>
    <string name="_1834462681">01834462681</string>
    <string name="get_otp">Get otp</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="we_deliverd_product_all_over_the_bangladesh_withing_an_hour">We Deliverd product all over the bangladesh within Short time.</string>
    <string name="home">Home</string>
    <string name="wish_list">Wish List</string>
    <string name="cart">Profile</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">All Category:</string>
    <string name="viewall">ViewAll</string>
    <string name="_200_tk">300tk</string>
    <string name="new_arrival">Gents Fashion</string>
    <string name="add">+ Add</string>
    <string name="_250_tk">250 TK</string>
    <string name="deshi_chesee_regular">Deshi chesee Regular</string>
    <string name="my_cart">My Cart</string>
    <string name="gents">Gents</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="office_address">Road #7, House #47. Nikunja-1, Khilkhet, Dhaka-1229.</string>
    <string name="office_phone_no">01787663280</string>
    <string name="info_bghaat_com">info@bghaat.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="all_category">All Category</string>
    <string name="cart_drawer">Cart</string>
    <string name="rate_us">Rate Us</string>
    <string name="health_beauty"><![CDATA[Health & Beauty]]></string>

    <string name="okey">Okey</string>
    <string name="title">This the title</string>
    <string name="success">Shipping Cost</string>
    <string name="msg_subscribed">Done</string>
    <string name="msg_subscribe_failed">failed</string>


</resources>