<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/category"
        android:title="@string/all_category"
        android:icon="@drawable/ic_baseline_category_24"/>

    <item
        android:id="@+id/allProduct"
        android:title="All product"
        android:icon="@drawable/ic_baseline_unfold_more_24"/>


    <item
        android:id="@+id/cart"
        android:title="@string/cart_drawer"
        android:icon="@drawable/shopping_cart"/>

    <item
        android:id="@+id/contact"
        android:title="@string/contact_us"
        android:icon="@drawable/contact"/>


    <item
        android:id="@+id/rate"
        android:title="@string/rate_us"
        android:icon="@drawable/rate"/>


</menu>