<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="5dp"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_product_best_selling"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:src="@drawable/deshi_chesse"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_product_name_best_selling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deshi_chesee_regular"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/iv_product_best_selling"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_price_best_selling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_250_tk"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name_best_selling"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_strike_best_selling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_200_tk"
            app:layout_constraintStart_toEndOf="@id/tv_price_best_selling"
            app:layout_constraintTop_toTopOf="@id/tv_price_best_selling"
            app:layout_constraintBottom_toBottomOf="@id/tv_price_best_selling"
            android:layout_marginStart="8sp"/>

        <TextView
            android:id="@+id/tv_add_best_selling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/orange_button_background"
            app:layout_constraintTop_toBottomOf="@id/tv_strike_best_selling"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>