<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="3"
                    app:sliderStartAutoCycle="true" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_main_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/category"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_slider" />

            <TextView
                android:id="@+id/tv_main_cat_viewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewall"
                android:textColor="@color/white"
                android:background="@drawable/orange_button_background"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintTop_toBottomOf="@id/cv_slider"
                app:layout_constraintTop_toTopOf="@+id/tv_main_category"
                app:layout_constraintBottom_toBottomOf="@id/tv_main_category"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/tv_main_category"
                app:layout_constraintTop_toBottomOf="@id/tv_main_category" />

            <TextView
                android:id="@+id/tv_new_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_arrival"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/rv_main_category"
                app:layout_constraintStart_toStartOf="@id/rv_main_category"
                />

            <TextView
                android:id="@+id/tv_new_arrival_viewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ViewAll"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:background="@drawable/orange_button_background"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintTop_toBottomOf="@id/rv_main_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_new_arrival"
                app:layout_constraintBottom_toBottomOf="@id/tv_new_arrival"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_new_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_new_arrival"
                />

            <TextView
                android:id="@+id/tv_best_selling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Best Selling"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/rv_new_arrival"
                app:layout_constraintStart_toStartOf="@id/rv_new_arrival"
                />

            <TextView
                android:id="@+id/tv_best_selling_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ViewAll"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:background="@drawable/orange_button_background"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintTop_toBottomOf="@id/rv_main_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_best_selling"
                app:layout_constraintBottom_toBottomOf="@id/tv_best_selling"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_best_selling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_best_selling"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_offer"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="6dp"
                android:elevation="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rv_best_selling"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/three"
                    android:scaleType="centerCrop"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_top_brands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Top Brands"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/cv_offer"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_brands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_top_brands"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>